# call_me_maybe

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  stress_trace.txt  study_trace.txt  workflow
data/input/: stress_tests.json
data/output/: stress.json  study_one.json  study_one_result.json
src/: __main__.py  constraints.py  decoder.py  executor.py  models.py  parser.py  serializer.py  vocabulary.py
